--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'm1.ihm.m1_ihm_projet'
+    namespace 'fr.univ_poitiers.m1_ihm_projet'
     compileSdk 33
 
     defaultConfig {
-        applicationId "m1.ihm.m1_ihm_projet"
+        applicationId "fr.univ_poitiers.m1_ihm_projet"
         minSdk 27
         targetSdk 33
         versionCode 1
@@ -31,7 +31,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
